# siphash_c_d

./: Cargo.toml  README.md  create_readme.sh
.github/workflows/: rust.yml
src/: hasher.rs  iter.rs  lib.rs  residue.rs  siphash.rs  siphashkey.rs  state.rs
