[package]
name = "siphash_c_d"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A generic implementation of the siphash_c_d algorithm"
repository = "https://github.com/dandyvica/siphash_c_d"
categories = ["algorithms", "cryptography"]
authors = ["Alain Viguier <dandyvica@gmail.com>"]
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
